# wer-is-unaware

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alignment/: README.md
alignment/aligner/: __init__.py  align_terms.py  llm_aligner.py  openrouter_client.py
alignment/data/asr-transcripts/: golden_day1-consultation02-combined.json  golden_day1-consultation04-combined.json  golden_day2-consultation02-combined.json  golden_day2-consultation05-combined.json  golden_day3-consultation01-combined.json  golden_day3-consultation06-combined.json  golden_sample.json  patient_day1-consultation02-combined_deepgram.json  patient_day1-consultation04-combined_deepgram.json  patient_day2-consultation02-combined_deepgram.json  patient_day2-consultation05-combined_deepgram.json  patient_day3-consultation01-combined_deepgram.json  patient_day3-consultation06-combined_deepgram.json  patient_sample_demo.json
alignment/data/groundtruth-alignments/: groundtruth_alignment_day1-consultation02-combined_deepgram.json  (+6 more)
alignment/scripts/: evaluate_alignment.py  generate_alignment.py  run_evaluation.py
llm_judge/: README.md  __init__.py  data.py  eval.py  metrics.py  models.py  optimizers.py  signatures.py
llm_judge/cli/: __init__.py  run_eval.py  run_gepa.py  run_mipro.py
llm_judge/dataset/: primock_data_final_outcomes.csv
llm_judge/optimizers/: __init__.py  factory.py  gepa.py  mipro.py
llm_judge/providers/: __init__.py  bedrock.py  factory.py  gemini.py  ollama_chat.py  openrouter.py
llm_judge/results/: clinical_judge_gepa.json  clinical_judge_mipro_v2.json
(+10 files in other folders)
