[project]
name = "wer-is-unaware"
version = "0.1.0"
description = "LLM transcript alignment and evaluation toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.35.0",
  "num2words>=0.5.13",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
